优化swagger文档
