# controllers/token.go
@@ -15,13 +15,13 @@ type TokenController struct {
 // @Param	grant_type		formData	string	true	"grant_type: password,refresh_token ..."
 // @Param	username		formData	string	true	"username"
 // @Param	password		formData	string	true	"password"
-// @Param	scope   		formData	string	true	"read"
-// @Param	client_id   	formData	string	true	"12345"
-// @Param	client_secret   formData	string	true	"123456"
 // @Success 200 {object} common.Result
 // @Failure 403
 // @router /token [post]
 func (t *TokenController) GetToken() {
+	t.Ctx.Request.Form.Add("scope", "read")
+	t.Ctx.Request.Form.Add("client_id", "12345")
+	t.Ctx.Request.Form.Add("client_secret", "123456")
 	service.HandleTokenRequest(service.Srv, t.Ctx.ResponseWriter, t.Ctx.Request)
 }
 
