# routers/commentsRouter_controllers.go
@@ -97,51 +97,6 @@ func init() {
 			Filters:          nil,
 			Params:           nil})
 
-	beego.GlobalControllerRouter["school-web/controllers:ObjectController"] = append(beego.GlobalControllerRouter["school-web/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Post",
-			Router:           "/",
-			AllowHTTPMethods: []string{"post"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["school-web/controllers:ObjectController"] = append(beego.GlobalControllerRouter["school-web/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "GetAll",
-			Router:           "/",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["school-web/controllers:ObjectController"] = append(beego.GlobalControllerRouter["school-web/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Get",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["school-web/controllers:ObjectController"] = append(beego.GlobalControllerRouter["school-web/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Put",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"put"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["school-web/controllers:ObjectController"] = append(beego.GlobalControllerRouter["school-web/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Delete",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
 	beego.GlobalControllerRouter["school-web/controllers:TokenController"] = append(beego.GlobalControllerRouter["school-web/controllers:TokenController"],
 		beego.ControllerComments{
 			Method:           "GetTokenInfo",
