# swagger/swagger.json
@@ -1,12 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "beego Test API",
-        "description": "beego has a very cool tools to autogenerate documents for your API",
+        "title": "school API",
+        "description": "school API",
         "version": "1.0.0",
-        "termsOfService": "http://beego.me/",
+        "termsOfService": "https://github.com/xvjialing",
         "contact": {
-            "email": "astaxie@gmail.com"
+            "email": "xvjialing@outlook.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -23,6 +23,13 @@
                 "description": "get Article",
                 "operationId": "ArticleController.Get All",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "query",
                         "name": "query",
@@ -80,6 +87,13 @@
                 "operationId": "ArticleController.Post",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "body",
                         "name": "body",
                         "description": "body for Article content",
@@ -108,6 +122,13 @@
                 "operationId": "ArticleController.Get One",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "path",
                         "name": "id",
                         "description": "The key for staticblock",
@@ -134,6 +155,13 @@
                 "description": "update the Article",
                 "operationId": "ArticleController.Put",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "path",
                         "name": "id",
@@ -171,6 +199,13 @@
                 "operationId": "ArticleController.Delete",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "path",
                         "name": "id",
                         "description": "The id you want to delete",
@@ -196,6 +231,13 @@
                 "description": "get File",
                 "operationId": "FileController.Get All",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "query",
                         "name": "query",
@@ -253,6 +295,13 @@
                 "operationId": "FileController.Post",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "body",
                         "name": "body",
                         "description": "body for File content",
@@ -281,6 +330,13 @@
                 "operationId": "FileController.Get One",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "path",
                         "name": "id",
                         "description": "The key for staticblock",
@@ -307,6 +363,13 @@
                 "description": "update the File",
                 "operationId": "FileController.Put",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "path",
                         "name": "id",
@@ -344,6 +407,13 @@
                 "operationId": "FileController.Delete",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "path",
                         "name": "id",
                         "description": "The id you want to delete",
@@ -357,141 +427,6 @@
                     },
                     "403": {
                         "description": "id is empty"
-                    }
-                }
-            }
-        },
-        "/object/": {
-            "get": {
-                "tags": [
-                    "object"
-                ],
-                "description": "get all objects",
-                "operationId": "ObjectController.GetAll",
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Object"
-                        }
-                    },
-                    "403": {
-                        "description": ":objectId is empty"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "object"
-                ],
-                "description": "create object",
-                "operationId": "ObjectController.Create",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "The object content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Object"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} models.Object.Id"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/object/{objectId}": {
-            "get": {
-                "tags": [
-                    "object"
-                ],
-                "description": "find object by objectid",
-                "operationId": "ObjectController.Get",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "objectId",
-                        "description": "the objectid you want to get",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Object"
-                        }
-                    },
-                    "403": {
-                        "description": ":objectId is empty"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "object"
-                ],
-                "description": "update the object",
-                "operationId": "ObjectController.Update",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "objectId",
-                        "description": "The objectid you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "The body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Object"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Object"
-                        }
-                    },
-                    "403": {
-                        "description": ":objectId is empty"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "object"
-                ],
-                "description": "delete the object",
-                "operationId": "ObjectController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "objectId",
-                        "description": "The objectId you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "403": {
-                        "description": "objectId is empty"
                     }
                 }
             }
@@ -553,27 +488,6 @@
                         "description": "password",
                         "required": true,
                         "type": "string"
-                    },
-                    {
-                        "in": "formData",
-                        "name": "scope",
-                        "description": "read",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "formData",
-                        "name": "client_id",
-                        "description": "12345",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "formData",
-                        "name": "client_secret",
-                        "description": "123456",
-                        "required": true,
-                        "type": "string"
                     }
                 ],
                 "responses": {
@@ -597,6 +511,13 @@
                 "description": "get User",
                 "operationId": "UserController.Get All",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "query",
                         "name": "query",
@@ -654,6 +575,13 @@
                 "operationId": "UserController.Post",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "body",
                         "name": "body",
                         "description": "body for User content",
@@ -664,7 +592,7 @@
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "{int} models.User"
                     },
                     "403": {
@@ -681,6 +609,13 @@
                 "description": "get User by id",
                 "operationId": "UserController.Get One",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "path",
                         "name": "id",
@@ -708,6 +643,13 @@
                 "description": "update the User",
                 "operationId": "UserController.Put",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "path",
                         "name": "id",
@@ -745,6 +687,13 @@
                 "operationId": "UserController.Delete",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "access_token",
+                        "description": "access_token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "path",
                         "name": "id",
                         "description": "The id you want to delete",
@@ -764,7 +713,7 @@
         }
     },
     "definitions": {
-        "107.0xc0002de510.false": {
+        "107.0xc0000b7170.false": {
             "title": "false",
             "type": "object"
         },
@@ -777,7 +726,7 @@
                     "format": "int64"
                 },
                 "data": {
-                    "$ref": "#/definitions/107.0xc0002de510.false"
+                    "$ref": "#/definitions/107.0xc0000b7170.false"
                 },
                 "msg": {
                     "type": "string"
@@ -838,22 +787,6 @@
                 }
             }
         },
-        "models.Object": {
-            "title": "Object",
-            "type": "object",
-            "properties": {
-                "ObjectId": {
-                    "type": "string"
-                },
-                "PlayerName": {
-                    "type": "string"
-                },
-                "Score": {
-                    "type": "integer",
-                    "format": "int64"
-                }
-            }
-        },
         "models.User": {
             "title": "User",
             "type": "object",
@@ -889,10 +822,6 @@
         {
             "name": "article",
             "description": "ArticleController operations for Article\n"
-        },
-        {
-            "name": "object",
-            "description": "Operations about object\n"
         },
         {
             "name": "file",
